[project]
name = "docker-healthcheck-exporter"
version = "0.0.6"
description = ""
authors = [
    {name = "Gladioluss",email = "emurashin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "aiodocker (>=0.25.0,<0.26.0)"
]

[tool.poetry]
name = "docker-healthcheck-exporter"
version = "0.0.6"
description = "Prometheus exporter for Docker container healthchecks"
authors = ["Gladioluss <emurashin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "docker_healthcheck_exporter" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = ">=0.40.0,<0.41.0"
aiodocker = ">=0.25.0,<0.26.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
docker-healthcheck-exporter = "docker_healthcheck_exporter.__main__:main"

[project.scripts]
docker-healthcheck-exporter = "docker_healthcheck_exporter.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["docker_healthcheck_exporter"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
